<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

    <!-- Add Sign In text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <!-- Project Logo -->
    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="341dp"
        android:layout_height="282dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/myboxdeli" />

    <!-- Username EditText -->
    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/imageViewLogo"
        android:layout_marginTop="32dp"
        android:hint="Username"
        android:inputType="text"/>

    <!-- Password EditText -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/editTextUserName"
        android:layout_marginTop="16dp"
        android:hint="Password"
        android:inputType="textPassword"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="32dp"
        android:onClick="buttonLoginClicked"
        android:text="Login" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="88dp"
        android:onClick="buttonSignupClicked"
        android:text="Signup" />

</RelativeLayout>