<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SignupActivity">

    <!-- Username EditText -->
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="Username"
        android:inputType="text"
        android:layout_marginBottom="16dp" />

    <!-- Role EditText -->
    <TextView
        android:id="@+id/role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:text="Role" />

    <RadioGroup
        android:id="@+id/roleType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/role"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/roleAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Admin" />

        <RadioButton
            android:id="@+id/roleDriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Driver" />
    </RadioGroup>

    <!-- Vehicle No EditText -->
    <EditText
        android:id="@+id/editTextVehicle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/roleType"
        android:layout_marginBottom="16dp"
        android:hint="Vehicle No"
        android:inputType="text"
        android:visibility="invisible" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/editTextName"
        android:layout_marginBottom="16dp"
        android:hint="Password"
        android:inputType="textPassword" />

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:layout_below="@id/editTextVehicle" />

</RelativeLayout>
